--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.0",
     "node-sass": "4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-player": "^2.7.2",
     "react-scripts": "4.0.1",
+    "react-youtube": "^7.13.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
