--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.1",
     "react-player": "^2.7.2",
     "react-scripts": "4.0.1",
+    "react-select": "^3.1.1",
     "react-youtube": "^7.13.0",
     "web-vitals": "^0.2.4"
   },
