--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
+    "jquery": "^3.5.1",
     "node-sass": "4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-player": "^2.7.2",
+    "react-reveal": "^1.2.2",
     "react-scripts": "4.0.1",
     "react-select": "^3.1.1",
     "react-youtube": "^7.13.0",
